Added human age entry form

--- a/calculator.html
+++ b/calculator.html
@@ -6,6 +6,17 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+
+  <div id="container">
+    <div id="calculator">
+      <form>
+        <label>What is your current age in human years? <br>
+        <input type="text" id="humanYears"></label> <br>
+        <button type="text" id="calculate">Calculate</button>
+      </form>
+    </div>
+  </div>
+
   <script type="text/javascript" src="script.js">
   </script>
 </body>
