Calculator determines and displays age in dog years.

--- a/calculator.html
+++ b/calculator.html
@@ -10,9 +10,14 @@
   <div id="container">
     <div id="calculator">
       <form>
-        <label>What is your current age in human years? <br>
-        <input type="text" id="humanYears"></label> <br>
-        <button type="text" id="calculate">Calculate</button>
+        <p>
+        <label>What is your current age in human years?
+        <input type="text" id="humanYears"></label></p>
+        <p>
+        <button type="button" id="calculate">Calculate</button></p>
+        <p>
+        Answer: <span id="answer"></span>
+        </p>
       </form>
     </div>
   </div>
