Corrected syntax error

--- a/calculator.html
+++ b/calculator.html
@@ -11,12 +11,12 @@
     <div id="calculator">
       <form>
         <p>
-        <label>What is your current age in human years?
-        <input type="text" id="humanYears"></label></p>
+        <label>What is your current age in human years?</p>
+        <p><input type="text" id="humanYears"></label></p>
         <p>
         <button type="button" id="calculate">Calculate</button></p>
         <p>
-        Answer: <span id="answer"></span>
+        <span id="answer"></span>
         </p>
       </form>
     </div>
